--- a/manifest.json
+++ b/manifest.json
@@ -10,12 +10,12 @@
     "scope": "/",
     "icons": [
       {
-        "src": "asset/img/preview192.jpg",
+        "src": "/asset/img/preview192.jpg",
         "sizes": "192x192",
         "type": "image/jpg"
       },
       {
-        "src": "asset/img/preview512.jpg",
+        "src": "/asset/img/preview512.jpg",
         "sizes": "512x512",
         "type": "image/png"
       }
