--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,22 @@
 {
-    "name": "Arifiy",
-    "short_name": "AI",
-    "description": "music player",
-    "start_url": "/index.html",
-    "display": "standalone",
-    "background_color": "#ffffff",
-    "theme_color": "#4a90e2",
-    "orientation": "portrait-primary",
-    "scope": "/",
-    "icons": [
+  "name": "Arifiy",
+  "short_name": "Arifiy",
+  "start_url": "index.html",
+  "display": "standalone",
+  "background_color": "#fe585a",
+  "theme_color": "#fe585a",
+  "orientation": "portrait-primary",
+  "icons": [
       {
-        "src": "asset/img/preview192.jpg",
-        "sizes": "192x192",
-        "type": "image/jpg"
+          "src": "/asset/img/preview512.jpg",
+          "type": "image/png",
+          "sizes": "512×512",
+          "purpose": "any maskable"
       },
       {
-        "src": "asset/img/preview512.jpg",
-        "sizes": "512x512",
-        "type": "image/png"
+          "src": "/asset/img/preview144.jpg",
+          "sizes": "144x144",
+          "type": "image/png"
       }
-    ]
-  }
-  
+  ]
+}
