--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
       {
           "src": "asset/img/img512.png",
           "type": "image/png",
-          "sizes": "512×512",
+          "sizes": "512x512",
           "purpose": "any maskable"
       },
       {
